[B]Retrospect v5.2.10 - Changelog - 2020-08-17[/B]

...

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: SVT Play could not resolve Single Episode videos (Fixes #1414)