@@ -55,7 +55,7 @@
     <category id="channelsettings" label="30032">
         <setting type="lsep" label="30063" />
         <!-- start of active channels -->
-        <setting id="config_channel" type="select" label="30040" values="NPO Start|Kijk.nl|Vier|Vijf|Zes|VTM.be|Stievie|VRT NU|Ketnet|SVT Play|Kanal 5|Dplay [Sverige]|Kanal 9|Kanal 11" />
+        <setting id="config_channel" type="select" label="30040" values="NPO Start|RTL XL [RTL 4,5,7 &amp; 8]|Kijk.nl|Vier|Vijf|Zes|VTM.be|Stievie|VRT NU|Ketnet|SVT Play|Kanal 5|Dplay [Sverige]|Kanal 9|Kanal 11" />
         <!-- end of active channels -->
 
         <setting type="lsep" label="30032" />
@@ -70,27 +70,31 @@
         <setting id="channel_ED8FDB9C-3870-11E2-B1C2-192A6288709B_username" type="text" label="30094" default="" visible="eq(-5,NPO Start)" />
         <setting id="channel_ED8FDB9C-3870-11E2-B1C2-192A6288709B_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_ED8FDB9C-3870-11E2-B1C2-192A6288709B_password&amp;settingname=NPO.nl password&amp;tabfocus=102)" option="close" visible="eq(-6,NPO Start)" />
         <setting id="channel_ED8FDB9C-3870-11E2-B1C2-192A6288709B_password" default="" visible="eq(-7,NPO Start)" />
+        <!-- chn_rtl.py -->
+        <setting id="channel_15D92364-42F4-11DD-AF9B-7BFF55D89593_rtlxl_username" type="text" label="30094" default="" visible="eq(-8,RTL XL [RTL 4,5,7 &amp; 8])" />
+        <setting id="channel_15D92364-42F4-11DD-AF9B-7BFF55D89593_rtlxl_password" default="" visible="eq(-9,RTL XL [RTL 4,5,7 &amp; 8])" />
+        <setting id="channel_15D92364-42F4-11DD-AF9B-7BFF55D89593_rtlxl_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_15D92364-42F4-11DD-AF9B-7BFF55D89593_rtlxl_password&amp;settingname=RTL XL password&amp;tabfocus=102)" option="close" visible="eq(-10,RTL XL [RTL 4,5,7 &amp; 8])" />
         <!-- chn_sbs.py -->
-        <setting id="dplayse_username" type="text" label="30094" default="" visible="eq(-8,Kanal 11)|eq(-8,Kanal 9)|eq(-8,Dplay [Sverige])|eq(-8,Kanal 5)" />
-        <setting id="dplayse_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=dplayse_password&amp;settingname=Dplay password&amp;tabfocus=102)" option="close" visible="eq(-9,Kanal 11)|eq(-9,Kanal 9)|eq(-9,Dplay [Sverige])|eq(-9,Kanal 5)" />
-        <setting id="dplayse_password" default="" visible="eq(-10,Kanal 11)|eq(-10,Kanal 9)|eq(-10,Dplay [Sverige])|eq(-10,Kanal 5)" />
+        <setting id="dplayse_username" type="text" label="30094" default="" visible="eq(-11,Kanal 11)|eq(-11,Kanal 9)|eq(-11,Dplay [Sverige])|eq(-11,Kanal 5)" />
+        <setting id="dplayse_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=dplayse_password&amp;settingname=Dplay password&amp;tabfocus=102)" option="close" visible="eq(-12,Kanal 11)|eq(-12,Kanal 9)|eq(-12,Dplay [Sverige])|eq(-12,Kanal 5)" />
+        <setting id="dplayse_password" default="" visible="eq(-13,Kanal 11)|eq(-13,Kanal 9)|eq(-13,Dplay [Sverige])|eq(-13,Kanal 5)" />
         <!-- chn_svt.py -->
-        <setting id="channel_3AF9C61E-88B2-11E1-A03F-08F6BAE59B18_show_programs_folder" label="30582" type="bool" default="true" visible="eq(-11,SVT Play)" />
+        <setting id="channel_3AF9C61E-88B2-11E1-A03F-08F6BAE59B18_show_programs_folder" label="30582" type="bool" default="true" visible="eq(-14,SVT Play)" />
         <!-- chn_vier.py -->
-        <setting id="viervijfzes_username" type="text" label="30094" default="" visible="eq(-12,Zes)|eq(-12,Vijf)|eq(-12,Vier)" />
-        <setting id="viervijfzes_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=viervijfzes_password&amp;settingname=Vier/Vijf/Zes.be password&amp;tabfocus=102)" option="close" visible="eq(-13,Zes)|eq(-13,Vijf)|eq(-13,Vier)" />
-        <setting id="viervijfzes_password" default="" visible="eq(-14,Zes)|eq(-14,Vijf)|eq(-14,Vier)" />
-        <setting id="viervijfzes_refresh_token" default="" visible="eq(-15,Zes)|eq(-15,Vijf)|eq(-15,Vier)" />
+        <setting id="viervijfzes_username" type="text" label="30094" default="" visible="eq(-15,Zes)|eq(-15,Vijf)|eq(-15,Vier)" />
+        <setting id="viervijfzes_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=viervijfzes_password&amp;settingname=Vier/Vijf/Zes.be password&amp;tabfocus=102)" option="close" visible="eq(-16,Zes)|eq(-16,Vijf)|eq(-16,Vier)" />
+        <setting id="viervijfzes_password" default="" visible="eq(-17,Zes)|eq(-17,Vijf)|eq(-17,Vier)" />
+        <setting id="viervijfzes_refresh_token" default="" visible="eq(-18,Zes)|eq(-18,Vijf)|eq(-18,Vier)" />
         <!-- chn_vrtnu.py -->
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_username" label="30094" type="text" default="" visible="eq(-16,VRT NU)" />
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_F530A9EC-3C0D-49B6-96C2-480273417460_password&amp;settingname=VRT NU password&amp;tabfocus=102)" option="close" visible="eq(-17,VRT NU)" />
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password" default="" visible="eq(-18,VRT NU)" />
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_hls_over_dash" label="30099" type="bool" default="" visible="eq(-19,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_username" label="30094" type="text" default="" visible="eq(-19,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_F530A9EC-3C0D-49B6-96C2-480273417460_password&amp;settingname=VRT NU password&amp;tabfocus=102)" option="close" visible="eq(-20,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password" default="" visible="eq(-21,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_hls_over_dash" label="30099" type="bool" default="" visible="eq(-22,VRT NU)" />
         <!-- chn_vtmbe.py -->
-        <setting id="mediaan_username" type="text" label="30094" default="" visible="eq(-20,Stievie)|eq(-20,VTM.be)" />
-        <setting id="mediaan_password" default="" visible="eq(-21,Stievie)|eq(-21,VTM.be)" />
-        <setting id="mediaan_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=mediaan_password&amp;settingname=Mediaan Wachtwoord.be&amp;tabfocus=102)" option="close" visible="eq(-22,Stievie)|eq(-22,VTM.be)" />
-        <setting id="mediaan_signature" default="" visible="eq(-23,Stievie)|eq(-23,VTM.be)" />
+        <setting id="mediaan_username" type="text" label="30094" default="" visible="eq(-23,Stievie)|eq(-23,VTM.be)" />
+        <setting id="mediaan_password" default="" visible="eq(-24,Stievie)|eq(-24,VTM.be)" />
+        <setting id="mediaan_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=mediaan_password&amp;settingname=Mediaan Wachtwoord.be&amp;tabfocus=102)" option="close" visible="eq(-25,Stievie)|eq(-25,VTM.be)" />
+        <setting id="mediaan_signature" default="" visible="eq(-26,Stievie)|eq(-26,VTM.be)" />
         <!-- end of channel settings -->
     </category>
 
